# GLIMPSE2

./: .gitignore  CMakeLists.txt  Doxyfile  mkdocs.yml
.devcontainer/: Dockerfile  devcontainer.json  requirements.txt
.github/workflows/: doxygen.yml
common/src/utils/: basic_stats.h  otools.h
concordance/: CMakeLists.txt
concordance/src/checker/: CMakeLists.txt  checker_header.h  checker_parameters.cpp
concordance/src/containers/: CMakeLists.txt  call_set_header.h
docs/: index.md
docs/assets/css/: header.css
docs/assets/stylesheets/: extra.css
tests/: CMakeLists.txt  TestFile.cpp  TestFile.hpp  test_Concordance.cpp
versions/: versions.h
